--- a/cms/templates/studio_xblock_wrapper.html
+++ b/cms/templates/studio_xblock_wrapper.html
@@ -1,15 +1,48 @@
+
 <%!
 from django.utils.translation import ugettext as _
 from contentstore.views.helpers import xblock_studio_url
+import json
 %>
-
 <%
 xblock_url = xblock_studio_url(xblock)
 show_inline = xblock.has_children and not xblock_url
 section_class = "level-nesting" if show_inline else "level-element"
 collapsible_class = "is-collapsible" if xblock.has_children else ""
 label = xblock.display_name or xblock.scope_ids.block_type
+messages = json.dumps(xblock.validation_messages())
 %>
+
+        <%namespace name='static' file='static_content.html'/>
+
+<%block name="header_extras">
+<script type="text/template" id="component-validation-messages-tpl">
+    <%static:include path="js/component-validation-messages.underscore" />
+</script>
+</%block>
+
+<script type='text/javascript'>
+    require(["js/views/validation_messages", "js/models/validation_messages"],
+            function (ValidationMessagesView, ValidationMessagesModel) {
+                var allMessages = ${messages};
+
+                // TODO: make default implementation empty dict
+                if (!$.isEmptyObject(allMessages)) {
+                    var componentValidationDiv = $('div.component-validation-messages[data-locator="${xblock.location | h}"]');
+
+                    var model = new ValidationMessagesModel(allMessages);
+                    if ($.parseJSON("${is_root == True}".toLowerCase())) {
+                        model.set("root", true);
+                    }
+                    var view = new ValidationMessagesView({
+                        el: componentValidationDiv,
+                        model: model
+                    });
+                    view.render();
+                }
+            });
+</script>
+
 
 % if not is_root:
     % if is_reorderable:
@@ -64,21 +97,29 @@ label = xblock.display_name or xblock.scope_ids.block_type
             </ul>
         </div>
     </div>
-    % if xblock_url and not is_root:
-    <div class="xblock-header-secondary">
-        <div class="meta-info">${_('This block contains multiple components.')}</div>
-        <ul class="actions-list">
-            <li class="action-item action-view">
-                <a href="${xblock_url}" class="action-button">
-                    ## Translators: this is a verb describing the action of viewing more details
-                    <span class="action-button-text">${_('View')}</span>
-                    <i class="icon-arrow-right"></i>
-                </a>
-            </li>
-        </ul>
-    </div>
+    % if not is_root:
+        <div class="wrapper-xblock-message component-validation-messages" data-locator="${xblock.location | h}"/>
+        % if xblock_url:
+        <div class="xblock-header-secondary">
+            <div class="meta-info">${_('This block contains multiple components.')}</div>
+            <ul class="actions-list">
+                <li class="action-item action-view">
+                    <a href="${xblock_url}" class="action-button">
+                        ## Translators: this is a verb describing the action of viewing more details
+                        <span class="action-button-text">${_('View')}</span>
+                        <i class="icon-arrow-right"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        % endif
     % endif
  </header>
+
+% if is_root:
+    <div class="wrapper-xblock-message component-validation-messages" data-locator="${xblock.location | h}"/>
+% endif
+
 % if is_root or not xblock_url:
     <article class="xblock-render">
     ${content}
@@ -86,7 +127,6 @@ label = xblock.display_name or xblock.scope_ids.block_type
 % else:
     <div class="xblock-message-area">
     ${content}
-    </div>
 % endif
 
 % if not is_root:
