--- a/cms/templates/studio_xblock_wrapper.html
+++ b/cms/templates/studio_xblock_wrapper.html
@@ -2,6 +2,7 @@
 <%!
 from django.utils.translation import ugettext as _
 from contentstore.views.helpers import xblock_studio_url
+import json
 %>
 <%
 xblock_url = xblock_studio_url(xblock)
@@ -9,7 +10,7 @@ show_inline = xblock.has_children and not xblock_url
 section_class = "level-nesting" if show_inline else "level-element"
 collapsible_class = "is-collapsible" if xblock.has_children else ""
 label = xblock.display_name or xblock.scope_ids.block_type
-messages = xblock.validation_messages().to_json()
+messages = json.dumps(xblock.validate().to_json())
 %>
 
         <%namespace name='static' file='static_content.html'/>
@@ -23,14 +24,17 @@ messages = xblock.validation_messages().to_json()
 <script type='text/javascript'>
     require(["js/views/validation_messages", "js/models/validation_messages"],
             function (ValidationMessagesView, ValidationMessagesModel) {
-                var model = new ValidationMessagesModel(${messages});
 
+                var model = new ValidationMessagesModel(${messages});
+                debugger
                 if (!model.get("is_empty")) {
                     var validationEle = $('div.xblock-validation-messages[data-locator="${xblock.location | h}"]');
-
-                    if ($.parseJSON("${is_root == True}".toLowerCase())) {
-                        model.set("is_root", true);
-                    }
+                    % if xblock_url and not is_root:
+                    model.set("show_summary_only", true);
+                    % endif
+                    % if is_root:
+                    model.set("is_root", true);
+                    % endif
                     var view = new ValidationMessagesView({
                         el: validationEle,
                         model: model
