--- a/cms/templates/500.html
+++ b/cms/templates/500.html
@@ -1,4 +1,7 @@
-<%! from django.utils.translation import ugettext as _ %>
+<%!
+from django.utils.translation import ugettext as _
+from util.markup import format_html
+%>
 <%inherit file="base.html" />
 <%block name="title">${_("Studio Server Error")}</%block>
 <%block name="bodyclass">view-util util-500</%block>
@@ -13,11 +16,11 @@
       <p>
         ${_("An error occurred in Studio and the page could not be loaded. Please try again in a few moments.")}
         ${_("We've logged the error and our staff is currently working to resolve this error as soon as possible.")}
-        ${_('If the problem persists, please email us at {email_link}.').format(
+        ${format_html(_('If the problem persists, please email us at {email_link}.'),
               email_link=u'<a href="mailto:{email_address}">{email_address}</a>'.format(
                   email_address=settings.TECH_SUPPORT_EMAIL,
               )
-          )}
+          ) | n}
       </p>
     </article>
   </section>
