--- a/cms/templates/asset_index.html
+++ b/cms/templates/asset_index.html
@@ -3,6 +3,7 @@
 <%!
   from django.core.urlresolvers import reverse
   from django.utils.translation import ugettext as _
+  from util.markup import format_html
 %>
 <%block name="title">${_("Files & Uploads")}</%block>
 <%block name="bodyclass">is-signedin course uploads view-uploads</%block>
@@ -56,18 +57,36 @@
             <div class="bit">
                 <h3 class="title-3">${_("Adding Files for Your Course")}</h3>
 
-                <p>${_("To add files to use in your course, click {em_start}Upload New File{em_end}. Then follow the prompts to upload a file from your computer.").format(em_start='<strong>', em_end="</strong>")}</p>
+                <p>${format_html(_("To add files to use in your course, click {em_start}Upload New File{em_end}. "
+                        "Then follow the prompts to upload a file from your computer."),
+                        em_start="<strong>", 
+                        em_end="</strong>",
+                    ) | n}</p>
 
-                <p>${_("{em_start}Caution{em_end}: edX recommends that you limit the file size to {em_start}10 MB{em_end}. In addition, do not upload video or audio files. You should use a third party service to host multimedia files.").format(em_start='<strong>', em_end="</strong>")}</p>
+                <p>${format_html(_("{em_start}Caution{em_end}: "
+                        "edX recommends that you limit the file size to {em_start}10 MB{em_end}. "
+                        "In addition, do not upload video or audio files. "
+                        "You should use a third party service to host multimedia files."),
+                        em_start="<strong>",
+                        em_end="</strong>",
+                    ) | n}</p>
 
             	<p>${_("The course image, textbook chapters, and files that appear on your Course Handouts sidebar also appear in this list.")}</p>
             </div>
             <div class="bit">
                 <h3 class="title-3">${_("Using File URLs")}</h3>
 
-                <p>${_("Use the {em_start}Embed URL{em_end} value to link to the file or image from a component, a course update, or a course handout.").format(em_start='<strong>', em_end="</strong>")}</p>
+                <p>${format_html(_("Use the {em_start}Embed URL{em_end} value to link to the file or image "
+                        "from a component, a course update, or a course handout."),
+                        em_start="<strong>",
+                        em_end="</strong>",
+                    ) | n}</p>
 
-                <p>${_("Use the {em_start}External URL{em_end} value to reference the file or image only from outside of your course.").format(em_start='<strong>', em_end="</strong>")}</p>
+                <p>${format_html(_("Use the {em_start}External URL{em_end} value to reference the file or image "
+                        "only from outside of your course."),
+                        em_start="<strong>",
+                        em_end="</strong>",
+                    ) | n}</p>
                 <p>${_("Click in the Embed URL or External URL column to select the value, then copy it.")}</p>
             </div>
             <div class="bit external-help">
