--- a/common/lib/xmodule/xmodule/css/video/display.scss
+++ b/common/lib/xmodule/xmodule/css/video/display.scss
@@ -81,7 +81,7 @@ div.video {
     background-color: black;
     position: relative;
 
-    section.current-caption {
+    section.caption {
       background: rgba(255, 0, 0, 0.9); // / TODO: Convert this to black with opacity = 0.80
       padding: 5px;
       text-align: center;
