Fixing the hacks

--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -60,7 +60,9 @@
               <h3 class="hidden">${_('No playable video sources found.')}</h3>
           </section>
           <div class="video-player-post"></div>
-          <section class="caption"></section>
+          <section class="caption">
+              <span></span>
+          </section>
           <section class="video-controls is-hidden">
               <div class="slider" title="${_('Video position')}"></div>
               <div>
