--- a/common/lib/xmodule/xmodule/css/video/display.scss
+++ b/common/lib/xmodule/xmodule/css/video/display.scss
@@ -82,17 +82,21 @@ div.video {
     position: relative;
 
     section.caption {
-      background: rgba(255, 0, 0, 0.9); // / TODO: Convert this to black with opacity = 0.80
-      padding: 5px;
       text-align: center;
-      color: white;
-      font-weight: 700;
-      box-sizing: border-box;
-      bottom: 70px;
+      bottom: 78px;
       left: 0;
       position: absolute;
       width: 100%;
-      z-index: 9999;
+
+      span {
+        color: white;
+        font-weight: 700;
+        padding: 8px 16px;
+        box-sizing: border-box;
+        background: rgba(0,0,0,0.9);
+        border-radius: 4px;
+        border-radius: 4px;
+      }
     }
 
     div.video-player-pre, div.video-player-post {
