--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -61,7 +61,7 @@
           </section>
           <div class="video-player-post"></div>
           <section class="caption">
-              <span></span>
+              <p class="text"></p>
           </section>
           <section class="video-controls is-hidden">
               <div class="slider" title="${_('Video position')}"></div>
