--- a/common/lib/xmodule/xmodule/css/video/display.scss
+++ b/common/lib/xmodule/xmodule/css/video/display.scss
@@ -88,14 +88,18 @@ div.video {
       position: absolute;
       width: 100%;
 
-      span {
+      .text {
         color: white;
         font-weight: 700;
         padding: 8px 16px;
         box-sizing: border-box;
-        background: rgba(0,0,0,0.9);
-        border-radius: 4px;
-        border-radius: 4px;
+
+        text-shadow:
+           0 0 5px #000,
+           -1px -1px 1px #000,
+            1px -1px 1px #000,
+            -1px 1px 1px #000,
+             1px 1px 1px #000;
       }
     }
 
