--- a/common/lib/xmodule/xmodule/css/video/display.scss
+++ b/common/lib/xmodule/xmodule/css/video/display.scss
@@ -93,6 +93,7 @@ div.video {
         font-weight: 700;
         padding: 8px 16px;
         box-sizing: border-box;
+        cursor: pointer;
 
         text-shadow:
            0 0 5px #000,
