--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -59,6 +59,11 @@
               <div id="${id}"></div>
               <h3 class="hidden">${_('No playable video sources found.')}</h3>
           </section>
+
+          <span class="transcript-toggle" aria-label="${_('Toggle transcript')}" title="${_('Toggle transcript')}">
+            <i class="icon-caret-left"></i>
+          </span>
+
           <div class="video-player-post"></div>
           <section class="caption">
               <p class="text"></p>
