--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -60,8 +60,9 @@
               <h3 class="hidden">${_('No playable video sources found.')}</h3>
           </section>
 
-          <span class="transcript-toggle" aria-label="${_('Toggle transcript')}" title="${_('Toggle transcript')}">
-            <i class="icon-caret-left"></i>
+          <span tabindex="0" class="transcript-toggle" aria-label="${_('Toggle transcript')}" title="${_('Toggle transcript')}">
+            <i aria-hidden="true" class="icon-caret-left"></i>
+            <span class="sr">Toggle transcript</span>
           </span>
 
           <div class="video-player-post"></div>
