--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -17,6 +17,8 @@
     data-save-state-url="${ajax_url}"
     data-caption-data-dir="${data_dir}"
     data-show-captions="${show_captions}"
+    ## TODO: Set to {show_closed_captions}
+    data-show-closed-captions="true"
     data-general-speed="${general_speed}"
     data-speed="${speed}"
     data-saved-video-position="${saved_video_position}"
