`.caption` renamed to `.closed-caption`

--- a/common/lib/xmodule/xmodule/css/video/display.scss
+++ b/common/lib/xmodule/xmodule/css/video/display.scss
@@ -81,7 +81,7 @@ div.video {
     background-color: black;
     position: relative;
 
-    section.caption {
+    section.closed-caption {
       bottom: 78px;
       left: 0;
       position: absolute;
