--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -68,7 +68,7 @@
           </span>
 
           <div class="video-player-post"></div>
-          <section class="caption">
+          <section class="closed-caption">
               <p class="text"></p>
           </section>
           <section class="video-controls is-hidden">
