--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -63,7 +63,7 @@
           </section>
 
           <span tabindex="0" class="transcript-toggle" aria-label="${_('Toggle transcript')}" title="${_('Toggle transcript')}">
-            <i aria-hidden="true" class="icon-caret-left"></i>
+            <i aria-hidden="true" class="icon-caret-right"></i>
             <span class="sr">Toggle transcript</span>
           </span>
 
