Fixes initial CC location

--- a/common/lib/xmodule/xmodule/css/video/display.scss
+++ b/common/lib/xmodule/xmodule/css/video/display.scss
@@ -97,7 +97,7 @@ div.video {
         // Let Draggabilly do correct containment
         min-height: 25px;
         padding: 8px 16px 61px;
-        margin-bottom: 0;
+        margin-bottom: 4px;
 
         // Stroke around the text
         text-shadow:
