--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -61,7 +61,8 @@
               <h3 class="hidden">${_('No playable video sources found.')}</h3>
           </section>
 
-          <span tabindex="0" class="transcript-toggle" aria-label="${_('Toggle transcript')}" title="${_('Toggle transcript')}">
+          <span tabindex="0" class="transcript-toggle" aria-label="${_('Toggle transcript')}"
+                                                       title="${_('Toggle transcript')}">
             <i aria-hidden="true" class="icon-caret-right"></i>
             <span class="sr">Toggle transcript</span>
           </span>
