Unneeded change undo'ed

--- a/common/lib/xmodule/xmodule/css/video/display.scss
+++ b/common/lib/xmodule/xmodule/css/video/display.scss
@@ -643,7 +643,7 @@ div.video {
       line-height: lh();
 
       &.current {
-        color: black;
+        color: #333;
         font-weight: 700;
       }
 
