--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -61,10 +61,9 @@
               <h3 class="hidden">${_('No playable video sources found.')}</h3>
           </section>
 
-          <span tabindex="0" class="transcript-toggle" aria-label="${_('Toggle transcript')}"
-                                                       title="${_('Toggle transcript')}">
-            <i aria-hidden="true" class="icon-caret-right"></i>
-            <span class="sr">Toggle transcript</span>
+          <span tabindex="0" class="hide-captions" role="button" aria-disabled="false"
+                title="${_('Hide transcripts')}" aria-label="${_('Hide transcripts')}">
+            <i class="icon-caret-right" aria-hidden="true"></i>
           </span>
 
           <div class="video-player-post"></div>
@@ -96,7 +95,7 @@
                       <a href="#" class="quality-control is-hidden" title="${_('HD off')}" role="button" aria-disabled="false">${_('HD off')}</a>
 
                       <div class="lang menu-container">
-                        <a href="#" class="hide-subtitles" title="${_('Turn off captions')}" role="button" aria-disabled="false">${_('Turn off captions')}</a>
+                        <a href="#" class="hide-closed-captions" title="${_('Turn off captions')}" role="button" aria-disabled="false">${_('Turn off captions')}</a>
                       </div>
                   </div>
               </div>
