Finished unifiying naming mess in test/fixtures/code

--- a/cms/templates/ux/reference/container.html
+++ b/cms/templates/ux/reference/container.html
@@ -176,7 +176,7 @@
                                                                                     <a href="#" class="add-fullscreen" title="Fill browser" role="button" aria-disabled="false">Fill browser</a>
                                                                                     <a href="#" class="quality_control" title="HD off" role="button" aria-disabled="false" style="display: inline;">HD off</a>
 
-                                                                                    <a href="#" class="hide-subtitles" title="Turn on captions" role="button" aria-disabled="false" style="display: none;">Turn on captions</a>
+                                                                                    <a href="#" class="hide-closed-captions" title="Turn on captions" role="button" aria-disabled="false" style="display: none;">Turn on captions</a>
                                                                                 </div>
                                                                             </div>
                                                                         </section>
