--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -61,10 +61,10 @@
               <h3 class="hidden">${_('No playable video sources found.')}</h3>
           </section>
 
-          <span tabindex="0" class="hide-captions" role="button" aria-disabled="false"
-                title="${_('Hide transcripts')}" aria-label="${_('Hide transcripts')}">
+          <a href="#" tabindex="0" class="hide-captions" role="button" aria-disabled="false"
+                title="${_('Turn off transcripts')}">
             <i class="icon-caret-right" aria-hidden="true"></i>
-          </span>
+          </a>
 
           <div class="video-player-post"></div>
           <section class="closed-caption">
