Re-enable Draggabilly, fixing more tests

--- a/cms/templates/ux/reference/container.html
+++ b/cms/templates/ux/reference/container.html
@@ -151,7 +151,15 @@
                                                                             <iframe id="i4x-AndyA-ABT101-video-72b5a0d74e8c4ed4a4d4e6bf67837c09" frameborder="0" allowfullscreen="1" title="YouTube video player" width="640" height="360" src="https://www.youtube.com/embed/OEoXaMPEzfM?controls=0&amp;wmode=transparent&amp;rel=0&amp;showinfo=0&amp;enablejsapi=1&amp;modestbranding=1&amp;html5=1&amp;origin=http%3A%2F%2Flocalhost%3A8001" style="height: 411.75px; width: 732px; top: -22.875px; left: 0px;"></iframe>
                                                                             <h3 class="hidden">ERROR: No playable video sources found!</h3>
                                                                         </section>
+                                                                        <a href="#" tabindex="0" class="hide-captions" role="button" aria-disabled="false"
+                                                                              title="Turn off transcripts">
+                                                                          <i class="icon-caret-right" aria-hidden="true"></i>
+                                                                        </a>
+
                                                                         <div class="video-player-post"></div>
+                                                                        <section class="closed-caption">
+                                                                            <p class="text"></p>
+                                                                        </section>
                                                                         <section class="video-controls" style="">
                                                                             <div class="slider ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all" title="Video position" aria-disabled="false" tabindex="-1" style=""><div class="ui-slider-range ui-widget-header ui-slider-range-min" style="width: 0%;"></div><a class="ui-slider-handle ui-state-default ui-corner-all" href="#" role="slider" title="Video position" aria-disabled="false" aria-valuetext="0 seconds" style="left: 0%;"></a></div>
                                                                             <div>
